--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,7 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+index.md
 
 # PyCharm
 #  JetBrains specific template is maintainted in a separate JetBrains.gitignore that can
